// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Blockquote LongQuote smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <blockquote class="src-components-Blockquote-Blockquote-module__root--LtAGd">
    <p class="src-components-Blockquote-Blockquote-module__text--H_BLP">
      Et ad commodo ea ullamco quis irure consectetur sit est elit.
        Commodo amet aliqua incididunt id magna quis consequat aliqua consectetur ad.
        Laborum culpa quis elit eu ad. Est ex elit adipisicing pariatur sunt ipsum nostrud dolore.
        Lorem minim incididunt ullamco laboris magna labore enim.
        Ea qui anim fugiat proident deserunt exercitation id ad enim.
        Duis nulla ut ipsum excepteur pariatur pariatur mollit ex.
    </p>
  </blockquote>
</main>
`;

exports[`Components/Blockquote Playground smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <blockquote class="src-components-Blockquote-Blockquote-module__root--LtAGd">
    <p class="src-components-Blockquote-Blockquote-module__text--H_BLP">
      No one is perfect - that’s why pencils have erasers.
    </p>
  </blockquote>
</main>
`;

exports[`Components/Blockquote ShortQuote smoke-test 1`] = `
<main class="-storybook-preview-module__root--fQckk inter-normal">
  <blockquote class="src-components-Blockquote-Blockquote-module__root--LtAGd">
    <p class="src-components-Blockquote-Blockquote-module__text--H_BLP">
      No one is perfect.
    </p>
  </blockquote>
</main>
`;
